packages/java/src/main/resources/natives/macos-arm64/include/ts_pack.h


typedef struct TS_PACKByteRange TS_PACKByteRange;
typedef struct TS_PACKDownloadManager TS_PACKDownloadManager;
typedef struct TS_PACKLanguage TS_PACKLanguage;
typedef struct TS_PACKLanguageRegistry TS_PACKLanguageRegistry;
typedef struct TS_PACKNode TS_PACKNode;
typedef struct TS_PACKPackConfig TS_PACKPackConfig;
typedef struct TS_PACKParser TS_PACKParser;
typedef struct TS_PACKPoint TS_PACKPoint;
typedef struct TS_PACKProcessConfig TS_PACKProcessConfig;
typedef struct TS_PACKProcessResult TS_PACKProcessResult;
typedef struct TS_PACKTree TS_PACKTree;
typedef struct TS_PACKTreeCursor TS_PACKTreeCursor;
void ts_pack_free_string(char *ptr);
void ts_pack_free_bytes(uint8_t *ptr,
    uintptr_t len,
    uintptr_t cap);
int32_t ts_pack_parser_set_language(TS_PACKParser *this_,
    const char *name);
TS_PACKTree *ts_pack_parser_parse(TS_PACKParser *this_,
    const char *source);
TS_PACKTree *ts_pack_parser_parse_bytes(TS_PACKParser *this_,
    const uint8_t *source,
    uintptr_t source_len);
void ts_pack_parser_reset(TS_PACKParser *this_);
TS_PACKNode *ts_pack_tree_root_node(const TS_PACKTree *this_);
TS_PACKTreeCursor *ts_pack_tree_walk(const TS_PACKTree *this_);
TS_PACKNode *ts_pack_node_clone(const TS_PACKNode *this_);
char *ts_pack_node_kind(const TS_PACKNode *this_);
uint16_t ts_pack_node_kind_id(const TS_PACKNode *this_);
uintptr_t ts_pack_node_start_byte(const TS_PACKNode *this_);
uintptr_t ts_pack_node_end_byte(const TS_PACKNode *this_);
TS_PACKByteRange *ts_pack_node_byte_range(const TS_PACKNode *this_);
TS_PACKPoint *ts_pack_node_start_position(const TS_PACKNode *this_);
TS_PACKPoint *ts_pack_node_end_position(const TS_PACKNode *this_);
int32_t ts_pack_node_is_named(const TS_PACKNode *this_);
int32_t ts_pack_node_is_error(const TS_PACKNode *this_);
int32_t ts_pack_node_is_missing(const TS_PACKNode *this_);
int32_t ts_pack_node_is_extra(const TS_PACKNode *this_);
int32_t ts_pack_node_has_error(const TS_PACKNode *this_);
TS_PACKNode *ts_pack_node_parent(const TS_PACKNode *this_);
TS_PACKNode *ts_pack_node_child(const TS_PACKNode *this_,
    uint32_t index);
uintptr_t ts_pack_node_child_count(const TS_PACKNode *this_);
TS_PACKNode *ts_pack_node_named_child(const TS_PACKNode *this_,
    uint32_t index);
uintptr_t ts_pack_node_named_child_count(const TS_PACKNode *this_);
TS_PACKNode *ts_pack_node_child_by_field_name(const TS_PACKNode *this_,
    const char *name);
char *ts_pack_node_to_sexp(const TS_PACKNode *this_);
TS_PACKTreeCursor *ts_pack_node_walk(const TS_PACKNode *this_);
TS_PACKNode *ts_pack_tree_cursor_node(const TS_PACKTreeCursor *this_);
int32_t ts_pack_tree_cursor_goto_first_child(TS_PACKTreeCursor *this_);
int32_t ts_pack_tree_cursor_goto_parent(TS_PACKTreeCursor *this_);
int32_t ts_pack_tree_cursor_goto_next_sibling(TS_PACKTreeCursor *this_);
char *ts_pack_tree_cursor_field_name(const TS_PACKTreeCursor *this_);
TS_PACKLanguage *ts_pack_language_registry_get_language(const TS_PACKLanguageRegistry *this_,
    const char *name);
char *ts_pack_language_registry_available_languages(const TS_PACKLanguageRegistry *this_);
int32_t ts_pack_language_registry_has_language(const TS_PACKLanguageRegistry *this_,
    const char *name);
uintptr_t ts_pack_language_registry_language_count(const TS_PACKLanguageRegistry *this_);
TS_PACKProcessResult *ts_pack_language_registry_process(const TS_PACKLanguageRegistry *this_,
    const char *source,
    const TS_PACKProcessConfig *config);
TS_PACKDownloadManager *ts_pack_download_manager_new(const char *version);
uintptr_t ts_pack_language_count(void);
TS_PACKProcessResult *ts_pack_process(const char *source,
    const TS_PACKProcessConfig *config);
int32_t ts_pack_init(const TS_PACKPackConfig *config);
int32_t ts_pack_configure(const TS_PACKPackConfig *config);
uintptr_t ts_pack_download(const char *names);
uintptr_t ts_pack_download_all(void);
uintptr_t ts_pack_download_group(const char *name);
char *ts_pack_manifest_languages(void);
char *ts_pack_downloaded_languages(void);
int32_t ts_pack_clean_cache(void);
char *ts_pack_cache_dir(void);