packages/java/src/main/java/dev/kreuzberg/treesitterlanguagepack/NativeLib.java


  static final MethodHandle TS_PACK_LANGUAGE_COUNT =
      LINKER.downcallHandle(
          LIB.find("ts_pack_language_count").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_LONG));

  static final MethodHandle TS_PACK_PROCESS =
      LINKER.downcallHandle(
          LIB.find("ts_pack_process").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_INIT =
      LINKER.downcallHandle(
          LIB.find("ts_pack_init").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_CONFIGURE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_configure").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_DOWNLOAD =
      LINKER.downcallHandle(
          LIB.find("ts_pack_download").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_DOWNLOAD_ALL =
      LINKER.downcallHandle(
          LIB.find("ts_pack_download_all").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_LONG));

  static final MethodHandle TS_PACK_DOWNLOAD_GROUP =
      LINKER.downcallHandle(
          LIB.find("ts_pack_download_group").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_MANIFEST_LANGUAGES =
      LINKER.downcallHandle(
          LIB.find("ts_pack_manifest_languages").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_DOWNLOADED_LANGUAGES =
      LINKER.downcallHandle(
          LIB.find("ts_pack_downloaded_languages").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_CLEAN_CACHE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_clean_cache").orElseThrow(), FunctionDescriptor.ofVoid());

  static final MethodHandle TS_PACK_CACHE_DIR =
      LINKER.downcallHandle(
          LIB.find("ts_pack_cache_dir").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_FREE_STRING =
      LINKER.downcallHandle(
          LIB.find("ts_pack_free_string").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_FREE_BYTES =
      LINKER.downcallHandle(
          LIB.find("ts_pack_free_bytes").orElseThrow(),
          FunctionDescriptor.ofVoid(
              ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG));

  static final MethodHandle TS_PACK_PARSER_SET_LANGUAGE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_parser_set_language").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_PARSER_PARSE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_parser_parse").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_PARSER_PARSE_BYTES =
      LINKER.downcallHandle(
          LIB.find("ts_pack_parser_parse_bytes").orElseThrow(),
          FunctionDescriptor.of(
              ValueLayout.ADDRESS,
              ValueLayout.ADDRESS,
              ValueLayout.ADDRESS,
              ValueLayout.JAVA_LONG));

  static final MethodHandle TS_PACK_PARSER_RESET =
      LINKER.downcallHandle(
          LIB.find("ts_pack_parser_reset").orElseThrow(),
          FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_PARSER_DEFAULT =
      LINKER.downcallHandle(
          LIB.find("ts_pack_parser_default").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_TREE_ROOT_NODE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_tree_root_node").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_TREE_WALK =
      LINKER.downcallHandle(
          LIB.find("ts_pack_tree_walk").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_CLONE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_clone").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_KIND =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_kind").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_KIND_ID =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_kind_id").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_START_BYTE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_start_byte").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_END_BYTE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_end_byte").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_BYTE_RANGE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_byte_range").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_START_POSITION =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_start_position").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_END_POSITION =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_end_position").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_IS_NAMED =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_is_named").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_IS_ERROR =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_is_error").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_IS_MISSING =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_is_missing").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_IS_EXTRA =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_is_extra").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_HAS_ERROR =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_has_error").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_PARENT =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_parent").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_CHILD =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_child").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

  static final MethodHandle TS_PACK_NODE_CHILD_COUNT =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_child_count").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_NAMED_CHILD =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_named_child").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

  static final MethodHandle TS_PACK_NODE_NAMED_CHILD_COUNT =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_named_child_count").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_CHILD_BY_FIELD_NAME =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_child_by_field_name").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_TO_SEXP =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_to_sexp").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_NODE_WALK =
      LINKER.downcallHandle(
          LIB.find("ts_pack_node_walk").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_TREE_CURSOR_NODE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_tree_cursor_node").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_TREE_CURSOR_GOTO_FIRST_CHILD =
      LINKER.downcallHandle(
          LIB.find("ts_pack_tree_cursor_goto_first_child").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_TREE_CURSOR_GOTO_PARENT =
      LINKER.downcallHandle(
          LIB.find("ts_pack_tree_cursor_goto_parent").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_TREE_CURSOR_GOTO_NEXT_SIBLING =
      LINKER.downcallHandle(
          LIB.find("ts_pack_tree_cursor_goto_next_sibling").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_TREE_CURSOR_FIELD_NAME =
      LINKER.downcallHandle(
          LIB.find("ts_pack_tree_cursor_field_name").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_LANGUAGE_REGISTRY_GET_LANGUAGE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_language_registry_get_language").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_LANGUAGE_REGISTRY_AVAILABLE_LANGUAGES =
      LINKER.downcallHandle(
          LIB.find("ts_pack_language_registry_available_languages").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_LANGUAGE_REGISTRY_HAS_LANGUAGE =
      LINKER.downcallHandle(
          LIB.find("ts_pack_language_registry_has_language").orElseThrow(),
          FunctionDescriptor.of(
              ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_LANGUAGE_REGISTRY_LANGUAGE_COUNT =
      LINKER.downcallHandle(
          LIB.find("ts_pack_language_registry_language_count").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_LANGUAGE_REGISTRY_PROCESS =
      LINKER.downcallHandle(
          LIB.find("ts_pack_language_registry_process").orElseThrow(),
          FunctionDescriptor.of(
              ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_LANGUAGE_REGISTRY_DEFAULT =
      LINKER.downcallHandle(
          LIB.find("ts_pack_language_registry_default").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS));

  static final MethodHandle TS_PACK_DOWNLOAD_MANAGER_NEW =
      LINKER.downcallHandle(
          LIB.find("ts_pack_download_manager_new").orElseThrow(),
          FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
